# jira-dependency-graph

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  jira-dependency-graph.py  mypy.ini  pyproject.toml  requirements.txt
schemas/: issue_links.py  jira.py
schemas/json/: issue_links.json  jira.json
