[tool.poetry]
name = "zarifpour:jira-dependency-graph"
version = "0.1.0"
description = "Graph visualizer for JIRA ticket dependencies"
authors = ["Daniel Zarifpour <daniel@zarif.pro>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.22"
black = "^22.10.0"
mypy = "^0.990"
types-requests = "^2.28.11"
pydantic = "^1.10.2"
datamodel-code-generator = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
